--- a/notebooks/gmm_exploration_test.ipynb
+++ b/notebooks/gmm_exploration_test.ipynb
@@ -32,7 +32,7 @@
     "                             VariationalSearchAcquisition)\n",
     "from vsd.generation import generate_candidates_reinforce\n",
     "from vsd.proposals import GaussianKDEProposal\n",
-    "from vsd.surrogates import ContinuousCPEModel, fit_cpe\n",
+    "from vsd.cpe import ContinuousCPEModel, fit_cpe\n",
     "from vsd.thresholds import AnnealedThreshold\n",
     "\n",
     "SEED = 42\n",
@@ -442,7 +442,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.9"
+   "version": "3.13.3"
   }
  },
  "nbformat": 4,
