updates to README and docs
readme updated

many documentation updates

--- a/notebooks/gmm_exploration_test.ipynb
+++ b/notebooks/gmm_exploration_test.ipynb
@@ -28,12 +28,14 @@
     "from scipy.stats import multinomial, multivariate_normal\n",
     "from sklearn.metrics import balanced_accuracy_score, r2_score\n",
     "\n",
-    "from vsd.acquisition import (LogPIClassiferAcquisition,\n",
-    "                             VariationalSearchAcquisition)\n",
-    "from vsd.generation import generate_candidates_reinforce\n",
+    "from vsd.acquisition import (\n",
+    "    LogPIClassifierAcquisition,\n",
+    "    VariationalSearchAcquisition\n",
+    ")\n",
+    "from vsd.generation import generate_candidates_iw\n",
     "from vsd.proposals import GaussianKDEProposal\n",
     "from vsd.cpe import ContinuousCPEModel, fit_cpe\n",
-    "from vsd.thresholds import AnnealedThreshold\n",
+    "from vsd.labellers import AnnealedThreshold\n",
     "\n",
     "SEED = 42\n",
     "np.random.seed(seed=SEED)\n",
@@ -60,8 +62,8 @@
     "USE_CLASSIFIER = True  # GP or CPE\n",
     "INITIAL_STD = 6\n",
     "INITIAL_MEAN = [0, 0]\n",
-    "THRESH = 2.2\n",
-    "INCREASING_THRESH = False  # Swtich between FL (false) and BBO (true)\n",
+    "THRESH = 1.5\n",
+    "INCREASING_THRESH = True # Swtich between FL (false) and BBO (true)\n",
     "PERCENTILE = 0.5\n",
     "TEMPERATURE = 0.7\n",
     "CLASSIFIER_REG = 1e-4"
@@ -240,11 +242,9 @@
     "\n",
     "\n",
     "# Adaptive threshold?\n",
-    "if INCREASING_THRESH:\n",
-    "    thresh = AnnealedThreshold(PERCENTILE, TEMPERATURE)\n",
-    "    THRESH = thresh(Yt)\n",
     "print(f\"Initial threshold: {THRESH:.3f}\")\n",
-    "\n",
+    "if INCREASING_THRESH:\n",
+    "    THRESH = AnnealedThreshold(PERCENTILE, TEMPERATURE)\n",
     "\n",
     "# Model initialisation\n",
     "if USE_CLASSIFIER:\n",
@@ -252,7 +252,7 @@
     "    fit_cpe(\n",
     "        model,\n",
     "        Xt.float(), Yt.float(),\n",
-    "        best_f=THRESH,\n",
+    "        labeller=THRESH,\n",
     "        batch_size=len(Yt),\n",
     "        optimizer_options=dict(weight_decay=CLASSIFIER_REG),\n",
     "        stop_options=dict(n_window=2000)\n",
@@ -311,7 +311,7 @@
     "\n",
     "# Expected log likelihood\n",
     "if USE_CLASSIFIER:\n",
-    "    acq = LogPIClassiferAcquisition(model=model)\n",
+    "    acq = LogPIClassifierAcquisition(model=model)\n",
     "else:\n",
     "    acq = LogProbabilityOfImprovement(model=model, best_f=THRESH)\n",
     "\n",
@@ -353,13 +353,13 @@
     "\n",
     "    # Optimise search distribution\n",
     "    iter, acquis, normgrad = [], [], []\n",
-    "    Xc, cand_acquis = generate_candidates_reinforce(\n",
+    "    # Xc, cand_acquis = generate_candidates_reinforce( # If you want to use on-policy gradients\n",
+    "    Xc, cand_acquis = generate_candidates_iw(\n",
     "        proposal_distribution=prop,\n",
     "        acquisition_function=elbo,\n",
     "        callback=callback,\n",
-    "        stop_options=dict(maxiter=30000, n_window=5000),\n",
+    "        stop_options=dict(maxiter=30000),\n",
     "        optimizer_options=dict(lr=1e-3),\n",
-    "        cv_smoothing=0.7,\n",
     "        gradient_samples=GRADIENT_SAMPLES,\n",
     "        candidate_samples=N_CANDIDATES\n",
     "    )\n",
@@ -380,8 +380,8 @@
     "    Xt = torch.concat((Xt, Xc))\n",
     "    Yt = torch.concat((Yt, Yc))\n",
     "    if INCREASING_THRESH:\n",
-    "        THRESH = thresh(Yt)\n",
-    "        print(f\"New threshold: {THRESH:.3f}\")\n",
+    "        THRESH(Yt)\n",
+    "        print(f\"New threshold: {THRESH.best_f:.3f}\")\n",
     "    if USE_CLASSIFIER:\n",
     "        logPY = acq(gXT).detach().numpy()\n",
     "        PY = np.exp(logPY)\n",
@@ -392,7 +392,7 @@
     "        fit_cpe(\n",
     "            model,\n",
     "            Xt.float(), Yt.float(),\n",
-    "            best_f=THRESH,\n",
+    "            labeller=THRESH,\n",
     "            batch_size=len(Yt),\n",
     "            optimizer_options=dict(weight_decay=CLASSIFIER_REG)\n",
     "        )\n",
@@ -442,7 +442,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.3"
+   "version": "3.12.12"
   }
  },
  "nbformat": 4,
